--- a/.hgignore
+++ b/.hgignore
@@ -50,6 +50,7 @@ syntax: regexp
 ^src/reportlab/graphics/pmout
 ^src/reportlab/graphics/epsout
 ^src/reportlab/graphics/pdfout
+^src/reportlab/graphics/out-svg
 ^tools/docco/.*\.pdf
 ^tests/test_.*\.pdf
 ^tests/test_.*\.svg
