--- a/appveyor.yml
+++ b/appveyor.yml
@@ -49,6 +49,7 @@ install:
   - "SET PATH=C:\\Python%PYTHON%;c:\\Python%PYTHON%\\scripts;%PATH%"
   - cmd: echo "C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64 > "C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\bin\amd64\vcvars64.bat"
   - cmd: c:\Python27-x64\python.exe -mvirtualenv myenv
+  - cmd: myenv\scripts\pip.exe --version
   - cmd: myenv\scripts\pip.exe install https://bitbucket.org/MrRLBitBucket/rl_ci_tools/get/tip.tar.gz
   - cmd: mkdir winstuff
   - cmd: myenv\scripts\python.exe -mrl_ci_tools download-resources --dst=winstuff winstuff.zip
@@ -60,6 +61,7 @@ build_script:
   - set FT_INC=winstuff\include\freetype2
   - set FT_LIB=winstuff\libs\%ARCH%\freetype.lib
   - cmd: echo "=============================== Python%PYTHON% install FT_INC='%FT_INC%' FT_LIB='%FT_LIB%'"
+  - cmd: pip --version
   - cmd: pip install wheel
   - cmd: python -W ignore setup.py bdist_wheel
 
@@ -75,6 +77,8 @@ on_failure:
 test_script:
   - echo "=============================== Python%PYTHON% TEST START"
   - c:\Python%PYTHON%\python.exe -mvirtualenv testenv
+  - testenv\scripts\pip.exe --version
+  - testenv\scripts\pip.exe install "pillow<5.0.0"
   - testenv\scripts\pip.exe install --cache-dir=dist --find-links file:dist reportlab
   #- myenv\scripts\python.exe -mrl_ci_tools info --recur testenv\Lib\site-packages
   #- myenv\scripts\python.exe -mrl_ci_tools info --recur testenv\Lib\site-packages\reportlab\fonts
