allow free pillow appveyor for testing

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -82,7 +82,7 @@ test_script:
   - echo "=============================== Python%PYTHON% TEST START"
   - c:\Python27-x64\python.exe -mvirtualenv -p C:\Python%PYTHON%\python.exe testenv
   - testenv\scripts\pip.exe --version
-  - testenv\scripts\pip.exe install "pillow<5.0.0"
+  - testenv\scripts\pip.exe install pillow
   - testenv\scripts\pip.exe install --cache-dir=dist --find-links file:dist --pre reportlab
   #- myenv\scripts\python.exe -mrl_ci_tools info --recur testenv\Lib\site-packages
   #- myenv\scripts\python.exe -mrl_ci_tools info --recur testenv\Lib\site-packages\reportlab\fonts
