--- a/src/rl_addons/renderPM/libart_lgpl/configure.in
+++ b/src/rl_addons/renderPM/libart_lgpl/configure.in
@@ -1,10 +1,18 @@
-AC_INIT(art_misc.h)
-AM_CONFIG_HEADER(config.h)
+m4_define([libart_major_version], [2])
+m4_define([libart_minor_version], [3])
+m4_define([libart_micro_version], [21])
+m4_define([libart_version],
+          [libart_major_version.libart_minor_version.libart_micro_version])
 
-LIBART_MAJOR_VERSION=2
-LIBART_MINOR_VERSION=3
-LIBART_MICRO_VERSION=12
-LIBART_VERSION=$LIBART_MAJOR_VERSION.$LIBART_MINOR_VERSION.$LIBART_MICRO_VERSION
+AC_INIT([libart-lgpl],[libart_version],[http://bugzilla.gnome.org/enter_bug.cgi?product=libart],[libart_lgpl])
+
+AC_CONFIG_HEADERS([config.h])
+
+LIBART_MAJOR_VERSION=libart_major_version
+LIBART_MINOR_VERSION=libart_minor_version
+LIBART_MICRO_VERSION=libart_micro_version
+LIBART_VERSION=libart_version
+
 LIBART_VERSION_INFO=`expr $LIBART_MAJOR_VERSION + $LIBART_MINOR_VERSION`:$LIBART_MICRO_VERSION:$LIBART_MINOR_VERSION
 
 AC_SUBST(LIBART_MAJOR_VERSION)
@@ -13,9 +21,7 @@ AC_SUBST(LIBART_MICRO_VERSION)
 AC_SUBST(LIBART_VERSION)
 AC_SUBST(LIBART_VERSION_INFO)
 
-VERSION=$LIBART_VERSION
-
-AM_INIT_AUTOMAKE(libart_lgpl, $VERSION)
+AM_INIT_AUTOMAKE([1.9 foreign no-dist-gzip dist-bzip2])
 
 AC_ARG_ENABLE(ansi, [  --enable-ansi           turn on strict ansi [default=no]],
 		    , enable_ansi=no)
@@ -27,7 +33,19 @@ AM_PROG_LIBTOOL
 
 AM_MAINTAINER_MODE
 
-AC_MSG_CHECKING([for Win32])
+AC_MSG_CHECKING([for some Win32 platform])
+case "$host" in
+  *-*-mingw*|*-*-cygwin*)
+    platform_win32=yes
+    ;;
+  *)
+    platform_win32=no
+    ;;
+esac
+AC_MSG_RESULT([$platform_win32])
+AM_CONDITIONAL(PLATFORM_WIN32, test "$platform_win32" = "yes")
+
+AC_MSG_CHECKING([for native Win32])
 case "$host" in
   *-*-mingw*)
     os_win32=yes
@@ -72,19 +90,25 @@ changequote([,])dnl
 
 AC_FUNC_ALLOCA
 
-LIBART_LIBDIR='-L${libdir}'
-LIBART_INCLUDEDIR='-I${includedir}'
-LIBART_LIBS='-lart_lgpl'
-
-AC_SUBST(LIBART_LIBDIR)
-AC_SUBST(LIBART_INCLUDEDIR)
-AC_SUBST(LIBART_LIBS)
-
 AC_C_BIGENDIAN
 
-AC_OUTPUT([
+AC_CHECK_SIZEOF(char)
+AC_SUBST(ART_SIZEOF_CHAR, $ac_cv_sizeof_char)
+AC_CHECK_SIZEOF(short)
+AC_SUBST(ART_SIZEOF_SHORT, $ac_cv_sizeof_short)
+AC_CHECK_SIZEOF(int)
+AC_SUBST(ART_SIZEOF_INT, $ac_cv_sizeof_int)
+AC_CHECK_SIZEOF(long)
+AC_SUBST(ART_SIZEOF_LONG, $ac_cv_sizeof_long)
+
+AC_CONFIG_FILES([
 libart-features.h
 Makefile
-libart-config
 libart-2.0.pc
-libart-zip], [case "$CONFIG_FILES" in *libart-config*) chmod +x libart-config;; esac])
+libart-2.0-uninstalled.pc
+libart-zip])
+
+AC_CONFIG_FILES([libart-config],[chmod +x libart-config])
+AC_CONFIG_FILES([gen_art_config.sh],[chmod +x gen_art_config.sh])
+
+AC_OUTPUT
