--- a/appveyor.yml
+++ b/appveyor.yml
@@ -66,7 +66,7 @@ build_script:
   - set FT_LIB=winstuff\libs\%ARCH%\freetype.lib
   - cmd: echo "=============================== Python%PYTHON% install FT_INC='%FT_INC%' FT_LIB='%FT_LIB%'"
   - cmd: c:\Python%PYTHON%\scripts\pip.exe --version
-  - cmd: c:\Python%PYTHON%\scripts\pip.exe install wheel
+  - cmd: c:\Python%PYTHON%\scripts\pip.exe install wheel==0.31.1
   - cmd: c:\Python%PYTHON%\python.exe -W ignore setup.py bdist_wheel
 
 on_success:
