--- a/.travis.yml
+++ b/.travis.yml
@@ -72,6 +72,13 @@ matrix:
     env:
     - MB_PYTHON_VERSION=3.7
     - PLAT=i686
+  - os: linux
+    env:
+    - MB_PYTHON_VERSION=3.8
+  - os: linux
+    env:
+    - MB_PYTHON_VERSION=3.8
+    - PLAT=i686
   - os: osx
     language: generic
     env:
@@ -88,9 +95,6 @@ matrix:
     language: generic
     env:
     - MB_PYTHON_VERSION=3.7
-  - os: linux
-    env:
-    - MB_PYTHON_VERSION=3.8
   - os: osx
     language: generic
     env:
