--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -68,19 +68,19 @@ install:
             C:\projects\install_python.ps1
         }
   - cmd: echo "C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64 > "C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\bin\amd64\vcvars64.bat"
-  - cmd: c:\Python37-x64\python.exe -mvirtualenv c:\projects\reportlab\myenv
-  - cmd: c:\projects\reportlab\myenv\scripts\python.exe -mpip install pip setuptools wheel -U
-  - cmd: c:\projects\reportlab\myenv\scripts\pip.exe --version
-  - cmd: c:\projects\reportlab\myenv\scripts\pip.exe install git+https://github.com/MrBitBucket/rl-ci-tools-mirror
+  - cmd: c:\Python37-x64\python.exe -mvirtualenv c:\projects\myenv
+  - cmd: c:\projects\myenv\scripts\python.exe -mpip install pip setuptools wheel -U
+  - cmd: c:\projects\myenv\scripts\pip.exe --version
+  - cmd: c:\projects\myenv\scripts\pip.exe install https://hg.reportlab.com/hg-public/rl-ci-tools/archive/tip.tar.gz
   - cmd: mkdir winstuff
-  - cmd: c:\projects\reportlab\myenv\scripts\python.exe -mrl_ci_tools download-resources --dst=winstuff winstuff.zip
-  - cmd: c:\projects\reportlab\myenv\scripts\python.exe -c"import zipfile;zipfile.ZipFile('winstuff/winstuff.zip','r').extractall('winstuff')"
-  - cmd: c:\projects\reportlab\myenv\scripts\python.exe -mrl_ci_tools info --recur winstuff
+  - cmd: c:\projects\myenv\scripts\python.exe -mrl_ci_tools download-resources --dst=winstuff winstuff.zip
+  - cmd: c:\projects\myenv\scripts\python.exe -c"import zipfile;zipfile.ZipFile('winstuff/winstuff.zip','r').extractall('winstuff')"
+  - cmd: c:\projects\myenv\scripts\python.exe -mrl_ci_tools info --recur winstuff
   - cmd: if not exist C:\Python%PYVER%\python.exe ( echo "!!!!!!!!!!!!!!!!!!!!!!! C:\Python%PYVER%\python.exe not found" && exit 1 )
   - cmd: if not exist C:\Python%PYVER%\scripts\pip.exe ( echo "!!!!!!!!!!!!!!!!!!!!!!! C:\Python%PYVER%\scripts\pip.exe not found" && exit 1 )
 
 build_script:
-  - if "%PYVER%" == "%FIRST%" c:\projects\reportlab\myenv\scripts\python.exe -mrl_ci_tools clear-cache %RLCACHE%
+  - if "%PYVER%" == "%FIRST%" c:\projects\myenv\scripts\python.exe -mrl_ci_tools clear-cache %RLCACHE%
   - cmd: if not exist C:\Python%PYVER%\python.exe ( echo "!!!!!!!!!!!!!!!!!!!!!!! C:\Python%PYVER%\python.exe not found" && exit 1 )
   - cmd: if not exist C:\Python%PYVER%\scripts\pip.exe ( echo "!!!!!!!!!!!!!!!!!!!!!!! C:\Python%PYVER%\scripts\pip.exe not found" && exit 1 )
   - set FT_INC=winstuff\include\freetype2
@@ -92,22 +92,22 @@ build_script:
 
 on_success:
   - echo "=============================== Python%PYVER% on_success"
-  - if "%PYVER%" == "%LAST%" c:\projects\reportlab\myenv\scripts\python.exe -mrl_ci_tools env
-  - c:\projects\reportlab\myenv\scripts\python.exe -mrl_ci_tools upload-caches --subdir=%RLCACHE% --verbosity=1 dist/*.whl
-  - if "%PYVER%" == "%LAST%" c:\projects\reportlab\myenv\scripts\python.exe -mrl_ci_tools email --subject="+++++ APPVEYOR %APPVEYOR_PROJECT_NAME% build succeeded" --faddr=rl-wheelbuilder --body="see https://www.reportlab.com/pypi/cache-info/%RLCACHE%/*/"
+  - if "%PYVER%" == "%LAST%" c:\projects\myenv\scripts\python.exe -mrl_ci_tools env
+  - c:\projects\myenv\scripts\python.exe -mrl_ci_tools upload-caches --subdir=%RLCACHE% --verbosity=1 dist/*.whl
+  - if "%PYVER%" == "%LAST%" c:\projects\myenv\scripts\python.exe -mrl_ci_tools email --subject="+++++ APPVEYOR %APPVEYOR_PROJECT_NAME% build succeeded" --faddr=rl-wheelbuilder --body="see https://www.reportlab.com/pypi/cache-info/%RLCACHE%/*/"
 
 on_failure:
-  - c:\projects\reportlab\myenv\scripts\python.exe -mrl_ci_tools email --subject="!!!!! APPVEYOR %APPVEYOR_PROJECT_NAME% build failed" --faddr=rl-wheelbuilder --body="see https://ci.appveyor.com/project/MrRLBitBucket/%PROJECT_NAME%/history"
+  - c:\projects\myenv\scripts\python.exe -mrl_ci_tools email --subject="!!!!! APPVEYOR %APPVEYOR_PROJECT_NAME% build failed" --faddr=rl-wheelbuilder --body="see https://ci.appveyor.com/project/MrRLBitBucket/%PROJECT_NAME%/history"
 
 test_script:
   - echo "=============================== Python%PYVER% TEST START"
-  - c:\Python37-x64\python.exe -mvirtualenv -p C:\Python%PYVER%\python.exe c:\projects\reportlab\testenv
-  - c:\projects\reportlab\testenv\scripts\python.exe -mpip install -U pip setuptools wheel
-  - c:\projects\reportlab\testenv\scripts\pip.exe --version
-  - c:\projects\reportlab\testenv\scripts\pip.exe install pillow
-  - c:\projects\reportlab\testenv\scripts\pip.exe install --cache-dir=dist --find-links file:dist --pre reportlab
-  #- c:\projects\reportlab\myenv\scripts\python.exe -mrl_ci_tools info --recur c:\projects\reportlab\testenv\Lib\site-packages
-  #- c:\projects\reportlab\myenv\scripts\python.exe -mrl_ci_tools info --recur c:\projects\reportlab\testenv\Lib\site-packages\reportlab\fonts
+  - c:\Python37-x64\python.exe -mvirtualenv -p C:\Python%PYVER%\python.exe c:\projects\testenv
+  - c:\projects\testenv\scripts\python.exe -mpip install -U pip setuptools wheel
+  - c:\projects\testenv\scripts\pip.exe --version
+  - c:\projects\testenv\scripts\pip.exe install pillow
+  - c:\projects\testenv\scripts\pip.exe install --cache-dir=dist --find-links file:dist --pre reportlab
+  #- c:\projects\myenv\scripts\python.exe -mrl_ci_tools info --recur c:\projects\testenv\Lib\site-packages
+  #- c:\projects\myenv\scripts\python.exe -mrl_ci_tools info --recur c:\projects\testenv\Lib\site-packages\reportlab\fonts
   - set OLDCD=%CD%
   - cd tests
   - ..\testenv\Scripts\python.exe .\runAll.py
@@ -120,6 +120,6 @@ test_script:
 
 #deploy_script:
   #- ps: if ($env:APPVEYOR_REPO_TAG -eq $TRUE) { pip install twine; twine upload dist/* }
-  #- c:\projects\reportlab\myenv\scripts\python -mrl_ci_tools upload-packages --verbosity=1 mydist\*.whl
+  #- c:\projects\myenv\scripts\python -mrl_ci_tools upload-packages --verbosity=1 mydist\*.whl
 
 deploy: off
