switch to manylinux 2010, hack fix for OSX 2.7 build

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ env:
   global:
   - REPO_DIR=reportlab
   - MULTIBUILD_DIR=multibuild
+  - MB_ML_VER=2010
   - CONFIG_PATH=.travis-config.sh
   - BUILD_COMMIT=master
   - PLAT=x86_64
