--- a/.github/workflows/buildwheels.yml
+++ b/.github/workflows/buildwheels.yml
@@ -23,8 +23,65 @@ jobs:
             python -mpip install --no-cache https://hg.reportlab.com/hg-public/rl-ci-tools/archive/tip.tar.gz -U
             python -mrl_ci_tools clear-cache "cibuildwheel/reportlab"
             echo "cleared remote cache for cibuildwheel/reportlab"
-  build-wheels-linux-mac-windows:
+
+  build-wheels-linux-other:
     needs: [clear-cache]
+    name: Build wheels on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    env:
+      CIBW_ARCHS_LINUX: auto aarch64 #needs quemu setup
+      CIBW_SKIP: pp*
+      CIBW_BEFORE_BUILD_LINUX: sh -c 'yum install cairo-devel fribidi -y || true'
+      CIBW_MANYLINUX_X86_64_IMAGE: manylinux2010
+      CIBW_MANYLINUX_I686_IMAGE: manylinux2010
+      #CIBW_BEFORE_TEST: pip install --no-cache-dir pyphen
+      #CIBW_TEST_REQUIRES: "${{ matrix.os != 'macos-latest' && 'pyphen pycairo rlPyCairo' || 'pyphen' }}"
+      # Will avoid testing on emulated architectures
+      # Skip trying to test arm64 builds on Intel Macs
+      CIBW_TEST_SKIP: "{aarch64,ppc64le,s390x} cp310-* *-macosx_arm64 *-macosx_universal2:arm64"
+      CIBW_TEST_COMMAND: sh -c 'echo "==================test env start================";env;echo "==================test env end=================="';python -c "import sys,os;r=os.system(' '.join((sys.executable,os.path.join(r'{project}','setup.py'),'tests-postinstall','--verbose','--pip-install=pyphen','--pip-install=rlPyCairo','--rl-index-url=https://${{secrets.CITOOLS_USER}}:${{secrets.CITOOLS_PASSWORD}}@www.reportlab.com/pypi','--rl-pip-install=pyfribidi')));marker=20*('!' if r else '#');print('test command --> %s'%r);sys.exit(0)"
+      CIBW_BUILD_VERBOSITY: 3
+    strategy:
+      fail-fast: true
+      matrix:
+        os: [ubuntu-latest]
+
+    steps:
+      - uses: actions/checkout@v2
+
+      # Used to host cibuildwheel
+      - uses: actions/setup-python@v2
+
+      - name: Set up QEMU
+        if: runner.os == 'Linux'
+        uses: docker/setup-qemu-action@v1
+        with:
+          platforms: all
+
+      - name: Install cibuildwheel
+        run: |
+          python -m pip install 'cibuildwheel==2.2.0a1'
+          python -c "import os;print('+++++ cwd=%r;dir=%r' % (os.getcwd(),os.listdir('.')))"
+
+      - name: Build wheels
+        run: python -m cibuildwheel --output-dir wheelhouse
+
+      - name: upload wheels
+        env:
+          CITOOLS_USER: "${{secrets.CITOOLS_USER}}"
+          CITOOLS_PASSWORD: "${{secrets.CITOOLS_PASSWORD}}"
+        run: |
+          python -mpip install --no-cache https://hg.reportlab.com/hg-public/rl-ci-tools/archive/tip.tar.gz -U
+          python -mrl_ci_tools upload-caches --subdir="cibuildwheel/reportlab" --verbosity=1 ./wheelhouse/*.whl
+          python -mrl_ci_tools env-upload
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: reportlab-lin-win-mac
+          path: ./wheelhouse/*.whl
+
+  build-wheels-linux-mac-windows:
+    needs: [build-wheels-linux-other]
     name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     env:
@@ -37,7 +94,7 @@ jobs:
       #CIBW_TEST_REQUIRES: "${{ matrix.os != 'macos-latest' && 'pyphen pycairo rlPyCairo' || 'pyphen' }}"
       # Will avoid testing on emulated architectures
       # Skip trying to test arm64 builds on Intel Macs
-      CIBW_TEST_SKIP: "*-manylinux_{aarch64,ppc64le,s390x} cp310-* *-macosx_arm64 *-macosx_universal2:arm64"
+      CIBW_TEST_SKIP: "*-manylinux_{aarch64,ppc64le,s390x} *-macosx_arm64 *-macosx_universal2:arm64"
       CIBW_TEST_COMMAND: python -c "import sys,os;r=os.system(' '.join((sys.executable,os.path.join(r'{project}','setup.py'),'tests-postinstall','--verbose','--pip-install=pyphen','--pip-install=rlPyCairo','--rl-index-url=https://${{secrets.CITOOLS_USER}}:${{secrets.CITOOLS_PASSWORD}}@www.reportlab.com/pypi','--rl-pip-install=pyfribidi')));sys.exit(('!!!!! test command --> %s !!!!!'%r) if r else r)"
       CIBW_BUILD_VERBOSITY: 3
     strategy:
