--- a/.github/workflows/buildwheels.yml
+++ b/.github/workflows/buildwheels.yml
@@ -11,33 +11,38 @@ jobs:
     name: clear-cache
     runs-on: ubuntu-latest
     steps:
+      - name: Dump github context
+        run:  echo "$GITHUB_CONTEXT"
+        shell: bash
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
       - name: setup python for clear-cache
+        if: github.event.repository.name == 'reportlab-mirror'
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
       - name: clear
+        if: github.event.repository.name == 'reportlab-mirror'
         env:
           CITOOLS_USER: "${{secrets.CITOOLS_USER}}"
           CITOOLS_PASSWORD: "${{secrets.CITOOLS_PASSWORD}}"
         run: |
             python -mpip install --no-cache https://hg.reportlab.com/hg-public/rl-ci-tools/archive/tip.tar.gz -U
-            python -mrl_ci_tools clear-cache "cibuildwheel/reportlab"
-            echo "cleared remote cache for cibuildwheel/reportlab"
+            python -mrl_ci_tools clear-cache "reportlab"
+            echo "cleared remote cache for reportlab"
   build-wheels-linux-mac-windows:
     needs: [clear-cache]
     name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     env:
-      #CIBW_SKIP: pp* cp37-macosx-arm64 cp37-macosx-universal2 cp36-macosx-arm64 cp36-macosx-universal2
-      CIBW_SKIP: pp* *-musllinux_* cp37-macosx_arm64 *-macosx_universal2 cp36-macosx_arm64 cp36-macosx_universal2
+      #CIBW_SKIP: pp* *-musllinux_* cp37-macosx_arm64 *-macosx_universal2 cp36-macosx_arm64
+      CIBW_SKIP: pp* cp37-macosx_arm64 *-macosx_universal2 cp36-macosx_arm64
       CIBW_BEFORE_BUILD_LINUX: sh -c 'yum install cairo-devel fribidi -y || true'
       CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
       CIBW_MANYLINUX_I686_IMAGE: manylinux2014
-      #CIBW_BEFORE_TEST: pip install --no-cache-dir pyphen
-      #CIBW_TEST_REQUIRES: "${{ matrix.os != 'macos-latest' && 'pyphen pycairo rlPyCairo' || 'pyphen' }}"
       # Will avoid testing on emulated architectures
       # Skip trying to test arm64 builds on Intel Macs
-      CIBW_TEST_SKIP: "*-manylinux_{aarch64,ppc64le,s390x} *-macosx_arm64 *-macosx_universal2:arm64"
+      CIBW_TEST_SKIP: "*-manylinux_{aarch64,ppc64le,s390x} *-musllinux_* *-macosx_arm64 *-macosx_universal2:arm64"
       CIBW_TEST_COMMAND: python -u -c "import sys,os,subprocess;r=subprocess.call((sys.executable,'-u',os.path.join(r'{project}','setup.py'),'tests-postinstall','--show-env','--verbose','--pip-install=pyphen','--pip-install=rlPyCairo','--rl-index-url=https://${{secrets.CITOOLS_USER}}:${{secrets.CITOOLS_PASSWORD}}@www.reportlab.com/pypi','--rl-pip-install=pyfribidi'),stderr=subprocess.STDOUT,timeout=180);marker=20*(chr(33) if r else '=');print('%s test command --> %s %s'%(marker,r,marker));sys.exit(r)" 2>&1
       CIBW_BUILD_VERBOSITY: 3
     strategy:
@@ -65,7 +70,7 @@ jobs:
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
-          CIBW_ARCHS_LINUX: auto aarch64 #needs quemu setup
+          CIBW_ARCHS_LINUX: all #auto aarch64 #needs quemu setup
           CIBW_ARCHS_MACOS: x86_64 arm64 universal2
 
       - name: upload wheels
@@ -74,7 +79,7 @@ jobs:
           CITOOLS_PASSWORD: "${{secrets.CITOOLS_PASSWORD}}"
         run: |
           python -mpip install --no-cache https://hg.reportlab.com/hg-public/rl-ci-tools/archive/tip.tar.gz -U
-          python -mrl_ci_tools upload-caches --subdir="cibuildwheel/reportlab" --verbosity=1 ./wheelhouse/*.whl
+          python -mrl_ci_tools upload-caches --subdir="reportlab" --verbosity=1 ./wheelhouse/*.whl
           python -mrl_ci_tools env-upload
 
       - uses: actions/upload-artifact@v2
@@ -82,6 +87,7 @@ jobs:
           name: reportlab-lin-win-mac
           path: ./wheelhouse/*.whl
   email:
+    if: github.event.repository.name == 'reportlab-mirror'
     name: email
     needs: [build-wheels-linux-mac-windows]
     runs-on: ubuntu-latest
