update 3.6.13 branch with rl_safe_eval & rl_config.toColorCanUse changes

--- a/.hgignore
+++ b/.hgignore
@@ -63,7 +63,7 @@ syntax: regexp
 ^tests/test_pdfgen_pycanvas_out\.txt
 ^tests/test_render(SVG|PS)_output\.html
 ^tests/test_source_chars\.txt
-^tests/test_graphics_images(|-cairo)\.(png|gif)
+^tests/test_graphics_images(|-(cairo|libart))\.(png|gif)
 ^tests/barcode-out
 ^tests/render-out
 ^tests/charts-out
@@ -76,3 +76,11 @@ syntax: regexp
 ^src/reportlab.egg-info/
 ^.git
 ^.gitignore
+^[lL]ib(64|)/
+^[lL]ib64
+^[iI]nclude/
+^share/
+^local/
+^(bin|[Ss]cripts)/
+^pyvenv.cfg
+^reportlab_(settings|mod)\.py
