--- a/.github/workflows/buildwheels.yml
+++ b/.github/workflows/buildwheels.yml
@@ -1,10 +1,14 @@
-# this is YAML check at http://www.yamllint.com/
+# YAML see https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions
 name: BuildWheels
 
 on:
   push:
     branches:
       - master
+
+concurrency:
+  group: ${{ github.repository }}
+  cancel-in-progress: true
 
 jobs:
   clear-cache:
@@ -18,9 +22,9 @@ jobs:
           GITHUB_CONTEXT: ${{ toJson(github) }}
       - name: setup python for clear-cache
         if: github.event.repository.name == 'reportlab-mirror'
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: '3.10'
       - name: clear
         if: github.event.repository.name == 'reportlab-mirror'
         env:
@@ -28,8 +32,8 @@ jobs:
           CITOOLS_PASSWORD: "${{secrets.CITOOLS_PASSWORD}}"
         run: |
             python -mpip install --no-cache https://hg.reportlab.com/hg-public/rl-ci-tools/archive/tip.tar.gz -U
-            python -mrl_ci_tools clear-cache "reportlab"
-            echo "cleared remote cache for reportlab"
+            python -mrl_ci_tools clear-cache "${{ github.event.repository.name }}"
+            echo "cleared remote cache for ${{ github.event.repository.name }}"
   build-wheels-linux-mac-windows:
     needs: [clear-cache]
     name: Build wheels on ${{ matrix.os }}
@@ -52,20 +56,22 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       # Used to host cibuildwheel
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
       - name: Set up QEMU
         if: runner.os == 'Linux'
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
         with:
           platforms: all
 
       - name: Install cibuildwheel
         run: |
-          python -m pip install 'cibuildwheel==2.10.2'
+          python -m pip install 'cibuildwheel==2.11.2'
           python -c "import os;print('+++++ cwd=%r;dir=%r' % (os.getcwd(),os.listdir('.')))"
 
       - name: Build wheels
@@ -87,12 +93,12 @@ jobs:
           CITOOLS_PASSWORD: "${{secrets.CITOOLS_PASSWORD}}"
         run: |
           python -mpip install --no-cache https://hg.reportlab.com/hg-public/rl-ci-tools/archive/tip.tar.gz -U
-          python -mrl_ci_tools upload-caches --subdir="reportlab" --verbosity=1 ./wheelhouse/*.whl
+          python -mrl_ci_tools upload-caches --subdir="${{ github.event.repository.name }}" --verbosity=1 ./wheelhouse/*.whl
           python -mrl_ci_tools env-upload
 
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
-          name: reportlab-lin-win-mac
+          name: "${{ github.event.repository.name }}-lin-win-mac"
           path: ./wheelhouse/*.whl
   email:
     if: github.event.repository.name == 'reportlab-mirror'
@@ -101,18 +107,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: setup python for upload
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: '3.10'
       - name: email confirmation
         env:
           CITOOLS_USER: "${{secrets.CITOOLS_USER}}"
           CITOOLS_PASSWORD: "${{secrets.CITOOLS_PASSWORD}}"
         run: |
             python -mpip install --no-cache https://hg.reportlab.com/hg-public/rl-ci-tools/archive/tip.tar.gz -U
-            BODY="$(python -mrl_ci_tools cache-info --subdir="reportlab" '*.whl')"
+            BODY="$(python -mrl_ci_tools cache-info --subdir='${{ github.event.repository.name }}' '*.whl')"
             NUPLOADS=$(expr $(echo "$BODY" | wc -l) - 1)
-            SUBJECT="$NUPLOADS reportlab wheels uploaded to our pypi/caches/reportlab folder by github"
+            SUBJECT="$NUPLOADS ${{ github.event.repository.name }} wheels uploaded to our pypi/caches/${{ github.event.repository.name }} folder by github"
             python -mrl_ci_tools email --subject="$SUBJECT" --body="$BODY"
             echo "$SUBJECT"
             echo "$BODY"
